--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -7,6 +7,15 @@
     android:background="@color/colorPrimary"
     tools:context=".CalculatorActivity">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/calculatorscreen" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
