--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorMainBackground">#64C7FF</color>
     <color name="colorTextCalculator">#FFA201</color>
+    <color name="colorTextmain">#3248CE</color>
+    <color name="colorTexBackgroundtmain">#FF9800</color>
 </resources>
