--- a/app/src/main/res/layout/activity_numsys.xml
+++ b/app/src/main/res/layout/activity_numsys.xml
@@ -14,7 +14,7 @@
         android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/startscreen" />
+        app:srcCompat="@drawable/numsysscreen" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,7 +52,7 @@
 
             <Button
                 android:id="@+id/btn_count"
-                android:layout_width="match_parent"
+                android:layout_width="332dp"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
@@ -80,7 +80,7 @@
                 android:id="@+id/txtbin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/holo_blue_dark"
+                android:textColor="@color/colorvvodTextNumSys"
                 android:textSize="24sp"
                 android:textStyle="normal|italic" />
 
