--- a/app/src/main/res/layout/activity_numsys.xml
+++ b/app/src/main/res/layout/activity_numsys.xml
@@ -31,14 +31,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="365dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <EditText
                 android:id="@+id/vvodtxt"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="97dp"
                 android:layout_marginTop="20dp"
                 android:layout_weight="1"
                 android:ems="10"
@@ -54,7 +54,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="491dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -108,6 +108,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorvvodTextNumSys"
+                android:textIsSelectable="true"
                 android:textSize="24sp"
                 android:textStyle="normal|italic" />
 
@@ -124,6 +125,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/holo_green_dark"
+                android:textIsSelectable="true"
                 android:textSize="24sp"
                 android:textStyle="normal|italic" />
 
@@ -132,6 +134,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/holo_red_dark"
+                android:textIsSelectable="true"
                 android:textSize="24sp"
                 android:textStyle="normal|italic" />
 
@@ -140,16 +143,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/holo_red_dark"
+                android:textIsSelectable="true"
                 android:textSize="24sp"
                 android:textStyle="normal|italic" />
 
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"></LinearLayout>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
