--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -54,76 +54,93 @@
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:columnCount="4">
+            android:columnCount="4"
+            android:layout_gravity="center" >
 
             <Button
                 android:id="@+id/delete"
                 android:layout_width="100dp"
-                android:text="C" />
+
+                android:text="@string/del" />
+
             <Button
                 android:id="@+id/delonechar"
                 android:layout_width="100dp"
-                android:text="@string/delonechar" />
+
+                android:text="@string/delonechar"
+                android:textSize="13dp" />
+
             <Button
                 android:id="@+id/division"
                 android:layout_width="100dp"
                 android:layout_column="3"
+
                 android:text="/" />
 
             <Button
                 android:id="@+id/btn_1"
                 android:layout_width="100dp"
+                android:background="@drawable/oval_button"
                 android:text="1" />
 
             <Button
                 android:id="@+id/btn_2"
                 android:layout_width="100dp"
+                android:background="@drawable/oval_button"
                 android:text="2" />
 
             <Button
                 android:id="@+id/btn_3"
                 android:layout_width="100dp"
+                android:background="@drawable/oval_button"
                 android:text="3" />
 
             <Button
                 android:id="@+id/multyply"
                 android:layout_width="100dp"
+
                 android:text="*" />
 
             <Button
                 android:id="@+id/btn_4"
                 android:layout_width="100dp"
+                android:background="@drawable/oval_button"
                 android:text="4" />
 
             <Button
                 android:id="@+id/btn_5"
                 android:layout_width="100dp"
+                android:background="@drawable/oval_button"
                 android:text="5" />
 
             <Button
                 android:id="@+id/btn_6"
                 android:layout_width="100dp"
+                android:background="@drawable/oval_button"
                 android:text="6" />
 
             <Button
                 android:id="@+id/minus"
                 android:layout_width="100dp"
+
                 android:text="-" />
 
             <Button
                 android:id="@+id/btn_7"
                 android:layout_width="100dp"
+                android:background="@drawable/oval_button"
                 android:text="7" />
 
             <Button
                 android:id="@+id/btn_8"
                 android:layout_width="100dp"
+                android:background="@drawable/oval_button"
                 android:text="8" />
 
             <Button
                 android:id="@+id/btn_9"
                 android:layout_width="100dp"
+                android:background="@drawable/oval_button"
                 android:text="9" />
 
             <Button
@@ -131,6 +148,7 @@
                 android:layout_width="100dp"
                 android:layout_rowSpan="3"
                 android:layout_gravity="fill"
+
                 android:text="+" />
 
             <Button
@@ -138,21 +156,27 @@
                 android:layout_width="100dp"
                 android:layout_columnSpan="2"
                 android:layout_gravity="fill"
+
                 android:text="0" />
 
             <Button
                 android:id="@+id/btn_00"
                 android:layout_width="100dp"
+
                 android:text="00" />
+
             <Button
                 android:id="@+id/btn_point"
                 android:layout_width="100dp"
+
                 android:text="." />
+
             <Button
                 android:id="@+id/equal"
                 android:layout_width="100dp"
                 android:layout_columnSpan="2"
                 android:layout_gravity="fill"
+
                 android:text="=" />
 
         </GridLayout>
