--- a/app/src/main/res/layout/activity_numsys.xml
+++ b/app/src/main/res/layout/activity_numsys.xml
@@ -113,7 +113,7 @@
                 android:textStyle="normal|italic" />
 
             <TextView
-                android:id="@+id/txtbin"
+                android:id="@+id/txt0"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorvvodTextNumSys"
@@ -121,7 +121,7 @@
                 android:textStyle="normal|italic" />
 
             <TextView
-                android:id="@+id/txtoctal"
+                android:id="@+id/txt1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/holo_green_dark"
@@ -130,16 +130,7 @@
                 android:textStyle="normal|italic" />
 
             <TextView
-                android:id="@+id/txthex"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/holo_red_dark"
-                android:textIsSelectable="true"
-                android:textSize="24sp"
-                android:textStyle="normal|italic" />
-
-            <TextView
-                android:id="@+id/txtdec"
+                android:id="@+id/txt2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/holo_red_dark"
