--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorTextmain">#3248CE</color>
     <color name="colorTexBackgroundtmain">#FF9800</color>
     <color name="colorvvodTextNumSys">#FF9800</color>
+    <color name="gray">#444440</color>
 </resources>
