--- a/app/src/main/res/menu/popupmenu.xml
+++ b/app/src/main/res/menu/popupmenu.xml
@@ -7,6 +7,7 @@
             android:title="@string/popupmenufrstitem"/>
         <item
             android:id="@+id/menu2"
+            android:icon="@mipmap/ic_launcher"
             android:title="@string/popupmenuscnditem"/>
 
     </group>
